--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,6 @@ stages :
                   resourceGroupName: 'tamops-arm-template'
                   location: 'eastus2'
                   templateLocation: 'Linked artifact'
-                  csmFile: '$(System.DefaultWorkingDirectory)/template/vnet.json'
-                  csmParametersFile: '$(System.DefaultWorkingDirectory)/template/vnet.parameters.json'
+                  csmFile: '$(System.DefaultWorkingDirectory)/vnet.json'
+                  csmParametersFile: '$(System.DefaultWorkingDirectory)/vnet.parameters.json'
                   deploymentMode: 'Incremental'
